upgrade java, gradle; store data as CSV instead of FODS